After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618023 - Fix loading OSD icons when there's no SVG version
Fix loading OSD icons when there's no SVG version
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2010-05-07 15:34 UTC by Bastien Nocera
Modified: 2010-05-10 01:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix loading OSD icons when there's no SVG version (1.65 KB, patch)
2010-05-07 15:34 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2010-05-07 15:34:32 UTC
See patch as well as:
https://bugzilla.gnome.org/show_bug.cgi?id=618021
for details.
Comment 1 Bastien Nocera 2010-05-07 15:34:35 UTC
Created attachment 160518 [details] [review]
Fix loading OSD icons when there's no SVG version

In gnome-icon-theme in 2.30.x, there's no SVG icons anymore,
so the OSD popups won't look like the rest of the system,
as "hand-drawn" icons will be used instead.
Comment 2 Bastien Nocera 2010-05-10 01:33:27 UTC
Attachment 160518 [details] pushed as bafb332 - Fix loading OSD icons when there's no SVG version