Fix loading OSD icons when there's no SVG version

In gnome-icon-theme in 2.30.x, there's no SVG icons anymore,
so the OSD popups won't look like the rest of the system,
as "hand-drawn" icons will be used instead.

https://bugzilla.gnome.org/show_bug.cgi?id=618023